--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/quickbox_l"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme_QuickBox_Front"
-        tools:targetApi="31" >
+        android:theme="@style/Theme.QuickBoxFront"
+        tools:targetApi="31"
+        android:icon="@drawable/quickbox_l">
         <activity
             android:name=".Home_Handler"
             android:exported="false" />
@@ -20,12 +20,8 @@
             android:parentActivityName=".SignIn_Handler"/>
         <activity
             android:name=".SignIn_Handler"
-            android:exported="false"
-            android:parentActivityName=".SplashActivity"/>
-        <activity
-            android:name=".SplashActivity"
-            android:theme="@android:style/Theme.Material.Light.NoActionBar"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
