--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:icon="@drawable/quickbox_l"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuickBoxFront"
         tools:targetApi="31"
-        android:icon="@drawable/quickbox_l">
+        android:networkSecurityConfig="@xml/network_sec"
+        >
         <activity
             android:name=".Home_Handler"
-            android:exported="false" />
+            android:exported="false"/>
         <activity
             android:name=".SignUp_Handler"
             android:exported="false"
