--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_sec"
         >
+        <activity android:name=".Profile_Handler"
+            android:exported="false"
+            android:parentActivityName=".Home_Handler"/>
         <activity
             android:name=".Home_Handler"
             android:exported="false"/>
