--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,12 @@
         tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_sec"
         >
+        <activity android:name=".Language_Handler"
+            android:exported="false"
+            android:parentActivityName=".Profile_Handler"/>
         <activity android:name=".Profile_Handler"
-            android:exported="false"/>
+            android:exported="false"
+            android:parentActivityName=".Home_Handler"/>
         <activity
             android:name=".Home_Handler"
             android:exported="false"/>
