--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="com.google.android.gms.permission.WEARABLE_DATA_LAYER"/>
-
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_DATA_SYNC" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/quickbox_l"
+        android:icon="@drawable/splash"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuickBoxFront"
-        tools:targetApi="31"
         android:networkSecurityConfig="@xml/network_sec">
+        <service
+            android:name=".WebSocketForegroundService"
+            android:foregroundServiceType="dataSync"/>
         <activity
-            android:name=".SignIn_Handler"
-            android:exported="true"
-            android:screenOrientation="portrait">
+            android:name=".SplashScreenActivity"
+            android:theme="@style/SplashTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".SignIn_Handler"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".SignUp_Handler"
