--- a/quickboxwear/src/main/AndroidManifest.xml
+++ b/quickboxwear/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="com.google.android.gms.permission.WEARABLE_DATA_LAYER"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 
     <application
@@ -22,14 +23,24 @@
         <meta-data
             android:name="com.google.android.wearable.standalone"
             android:value="false" />
-
-        <service android:name=".DataLayerListenerService"
+        <receiver android:name=".BootReceiver"
             android:exported="true">
             <intent-filter>
-                <action android:name="com.google.android.gms.wearable.DATA_CHANGED" />
-                <data android:host="*"
-                    android:pathPrefix="/deliveries"
-                    android:scheme="quickboxwear" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <service android:name=".DataLayerListenerService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER"
+                    tools:ignore="WearableBindListener" />
+                <action android:name="com.google.android.gms.wearable.MESSAGE_RECEIVED" />
+                <data
+                    android:host="*"
+                    android:pathPrefix="/"
+                    android:scheme="wear" />
             </intent-filter>
         </service>
 
